# SimpleARM

./: CMakeLists.txt  cpu.h  main.c  memory.h  parser.h
cpu/: cpsr.h  cpu.h  registers.h
decoder/: decoded_inst.h  decoder.h
executor/: executor.h
executor/instruction_impls/branch/: b_bl.h  bx.h
executor/instruction_impls/data_processing/: add.h  bit_clear.h  compare.h  move.h  subtract.h  test.h
executor/instruction_impls/multiplication/: mul_32.h  mul_64.h
faults/: codes.h
instructions/: cond.h  halt.h  instruction_impls.h  instructions.h  instructions_enums.h  nop.h  opcodes.h
instructions/branch/: b_bl.h  bx.h
instructions/data_processing/: data_processing.h  data_processing_decoder.h  operations.h
instructions/multiplication/: mul.h
